--- a/scanpy_analysis/Dimension_Reduction_Heatmaps_and_Contingency.ipynb
+++ b/scanpy_analysis/Dimension_Reduction_Heatmaps_and_Contingency.ipynb
@@ -432,6 +432,73 @@
     "contingency_table = pd.crosstab(data_aucell.obs['SPECID'],data_aucell.obs['Cell Type'],normalize=True)\n",
     "contingency_table"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotting colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#color dictionaries/hex codes for labeling sample types\n",
+    "color_dict_sample_type = {\n",
+    "    'HP':'#ff287f', \n",
+    "    'UNC':'#ffed82', \n",
+    "    'NL':'#97979E',  \n",
+    "    'SSL':'#fe8cff', \n",
+    "    'TA':'#0000ff',\n",
+    "    'TVA':'#751a41',\n",
+    "}\n",
+    "\n",
+    "adata.uns['Sample_Type_colors'] = ['#ff287f', '#97979E', '#fe8cff', '#0000ff', '#751a41', '#ffed82']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#color dictionaries/hex codes for labeling cell types\n",
+    "color_dict_cell_type = {\n",
+    "    'GOB':'#1f77b4', \n",
+    "    'TAC':'#d62728', \n",
+    "    'ASC':'#b5bd61', \n",
+    "    'TUF':'#8c564b', \n",
+    "    'ABS':'#63b850', \n",
+    "    'STM':'#aa40fc', \n",
+    "    'SSC':'#e377c2', \n",
+    "    'EE':'#ff7f0e', \n",
+    "    'CT':'#17becf'\n",
+    "}\n",
+    "\n",
+    "adata.uns['Cell_Type_colors'] = ['#63b850', '#b5bd61', '#17becf', '#ff7f0e', '#1f77b4', '#e377c2', '#aa40fc', '#d62728', '#8c564b']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cell cycle reference list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cell cycle list to be used with sc.tl.score_genes_cell_cycle function\n",
+    "cycle_genes = ['MCM5','PCNA','TYMS','FEN1','MCM2','MCM4','RRM1','UNG','GINS2','MCM6','CDCA7','DTL','PRIM1','UHRF1','MLF1IP','HELLS','RFC2','RPA2','NASP','RAD51AP1','GMNN','WDR76','SLBP','CCNE2','UBR7','POLD3','MSH2','ATAD2','RAD51','RRM2','CDC45','CDC6','EXO1','TIPIN','DSCC1','BLM','CASP8AP2','USP1','CLSPN','POLA1','CHAF1B','BRIP1','E2F8','HMGB2','CDK1','NUSAP1','UBE2C','BIRC5','TPX2','TOP2A','NDC80','CKS2','NUF2','CKS1B','MKI67','TMPO','CENPF','TACC3','FAM64A','SMC4','CCNB2','CKAP2L','CKAP2','AURKB','BUB1','KIF11','ANP32E','TUBB4B','GTSE1','KIF20B','HJURP','CDCA3','HN1','CDC20','TTK','CDC25C','KIF2C','RANGAP1','NCAPD2','DLGAP5','CDCA2','CDCA8','ECT2','KIF23','HMMR','AURKA','PSRC1','ANLN','LBR','CKAP5','CENPE','CTCF','NEK2','G2E3','GAS2L3','CBX5','CENPA']\n",
+    "s_genes = cycle_genes[:43]\n",
+    "g2m_genes = cycle_genes[43:]"
+   ]
   }
  ],
  "metadata": {
